--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "wle-networking",
+  "name": "wle-peerjs-networking",
   "version": "1.0.0",
-  "description": "A small set of components for [Wonderland Engine](https://wonderlandengine.com/ \"Wonderland Engine\") for basic networking functionalities using [peer.js](https://peerjs.com/ \"peer.js\").",
+  "description": "A small set of components for [Wonderland Engine](https://wonderlandengine.com/) for basic networking functionality using [peer.js](https://peerjs.com/).",
   "main": "peer-components.js",
   "type": "module",
   "scripts": {},
   "wonderlandengine": {},
+  "keywords": [
+      "webxr",
+      "wonderlandengine",
+      "networking",
+      "multiplayer",
+      "webrtc",
+      "components"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Srile/wle-networking.git"
+    "url": "git+https://github.com/Srile/wle-peerjs-networking.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Srile/wle-networking/issues"
+    "url": "https://github.com/Srile/wle-peerjs-networking/issues"
   },
-  "homepage": "https://github.com/Srile/wle-networking#readme",
+  "homepage": "https://github.com/Srile/wle-peerjs-networking#readme",
   "dependencies": {
     "peerjs": "^1.4.7"
   },
@@ -24,5 +32,8 @@
   },
   "devDependencies": {
     "prettier": "^2.8.7"
-  }
+  },
+  "files": [
+      "peer-components.js"
+  ]
 }
