Migrate to Typescript

--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "A small set of components for [Wonderland Engine](https://wonderlandengine.com/) for basic networking functionality using [peer.js](https://peerjs.com/).",
   "main": "peer-components.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "wonderlandengine": {},
   "keywords": [
-      "webxr",
-      "wonderlandengine",
-      "networking",
-      "multiplayer",
-      "webrtc",
-      "components"
+    "webxr",
+    "wonderlandengine",
+    "networking",
+    "multiplayer",
+    "webrtc",
+    "components"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Srile/wle-peerjs-networking.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Florian Isikci",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Srile/wle-peerjs-networking/issues"
   },
@@ -31,9 +33,11 @@
     "@wonderlandengine/api": "^1.0.0-rc.5 || ^1.0.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.7"
+    "@types/node": "^18.15.11",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.4"
   },
   "files": [
-      "peer-components.js"
+    "peer-components.js"
   ]
 }
