Upgrade Project imports with classes

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "wle-peerjs-networking",
   "version": "1.0.0",
   "description": "A small set of components for [Wonderland Engine](https://wonderlandengine.com/) for basic networking functionality using [peer.js](https://peerjs.com/).",
-  "main": "peer-components.js",
+  "main": "./dist/peer-components.js",
+  "module": "./dist/peer-components.js",
+  "types": "./dist/peer-components.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "prepublishOnly": "npm run build"
   },
   "wonderlandengine": {},
   "keywords": [
@@ -38,6 +42,7 @@
     "typescript": "^5.0.4"
   },
   "files": [
-    "peer-components.js"
+    "dist/*.js",
+    "dist/*.d.ts"
   ]
 }
