--- a/Project/package.json
+++ b/Project/package.json
@@ -14,6 +14,6 @@
     "@wonderlandengine/components": "^1.0.0-rc.6",
     "gl-matrix": "^3.4.3",
     "tone": "^14.7.77",
-    "wle-networking": "file:.."
+    "wle-peerjs-networking": "file:.."
   }
 }
