--- a/Project/package.json
+++ b/Project/package.json
@@ -10,8 +10,8 @@
     "wonderland-engine"
   ],
   "dependencies": {
-    "@wonderlandengine/api": "^1.0.0-rc.5",
-    "@wonderlandengine/components": "^1.0.0-rc.6",
+    "@wonderlandengine/api": "^1.1.2",
+    "@wonderlandengine/components": "^1.0.5",
     "gl-matrix": "^3.4.3",
     "tone": "^14.7.77",
     "wle-peerjs-networking": "file:.."
