--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "peerjs": "^1.4.7"
   },
   "peerDependencies": {
-    "@wonderlandengine/api": "^1.0.0-rc.5 || ^1.0.0"
+    "@wonderlandengine/api": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
