Move main file to src folder, add preinstall to package

--- a/Project/package.json
+++ b/Project/package.json
@@ -5,7 +5,9 @@
   "main": "js/index.js",
   "type": "module",
   "module": "js/index.js",
-  "scripts": {},
+  "scripts": {
+    "preinstall": "cd .. && npm install && npm run build"
+  },
   "keywords": [
     "wonderland-engine"
   ],
